# dolphin-qt

./: .gitignore.orig  CMakeLists.txt
Source/Core/Common/: StringUtil.cpp
Source/Core/DolphinQt/: CMakeLists.txt
Source/Core/DolphinQt/Src/: GameObject.cpp  GameObject.h  LogWidgets.cpp  LogWidgets.h  MainWindow.cpp  MainWindow.h  RenderWidget.cpp  SystemInfo.cpp  main.cpp
Source/Core/DolphinQt/Src/Config/: ConfigGeneral.cpp  ConfigGfx.cpp
Source/Core/DolphinQt/Src/GLInterface/: AGL.cpp  AGL.h
Source/Core/DolphinQt/Src/GameList/: GameTracker.cpp
Source/Core/DolphinQt/Src/Util/: Resources.cpp  Resources.h  Util.h
Source/Core/DolphinWX/: CMakeLists.txt
Source/Core/InputCommon/ControllerInterface/OSX/: OSXKeyboard.mm
Source/Core/VideoCommon/: RenderBase.cpp  RenderBase.cpp.orig  VideoConfig.cpp
